syntax = 'proto3';

package proto;

service ConfigurationService {
  rpc FindOneByUserUuid(ConfigurationUuid) returns (Configuration);
  rpc CreateConfiguration(CreateConfigurationInputData) returns (Configuration);
  rpc UpdateConfiguration(UpdateConfigurationInputData) returns (Configuration);
}

message ConfigurationUuid {
  string uuid = 1;
}

message Configuration {
  string uuid = 1;
  string userUuid = 2;
  string defaultLanguageForNewWord = 3;
  string defaultLanguageForWordTranslation = 4;
  bool isNull = 5;
}

message CreateConfigurationInputData {
  string userUuid = 1;
  string defaultLanguageForNewWord = 3;
  string defaultLanguageForWordTranslation = 4;
}

message UpdateConfigurationInputData {
  string configUuid = 1;
  CreateConfigurationInputData data = 2;
}
